# onshape-screenshotter-arm-test

./: .gitignore  README.md  config.toml  pyproject.toml
.github/workflows/: capture.yml  timelapse.yml
screenshotter/: __init__.py  capture.py  config.py  frames.py  index.py  onshape.py  slots.py  state.py  timelapse.py
tests/: test_capture.py  test_config.py  test_index.py  test_onshape.py  test_slots.py  test_state_frames.py  test_timelapse.py
