[project]
name = "onshape-screenshotter"
version = "0.1.0"
description = "Render an Onshape part studio or assembly on a schedule and commit it as a timelapse frame."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
# Runtime footprint is intentionally tiny so teams can audit it before trusting
# it with their Onshape keys: one third-party dependency, everything else stdlib.
dependencies = [
    "requests>=2.31",
]

[dependency-groups]
# Development-only tooling. Not installed by `pip install .` in the workflows.
dev = [
    "pytest>=7.4",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["screenshotter*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# pycodestyle (E/W), pyflakes (F), isort (I), pyupgrade (UP), flake8-bugbear (B).
select = ["E", "W", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
